@@ -33,7 +33,11 @@ doc/test/talks.txt
 doc/test/test.txt
 doc/test/xunit_setup.txt
 doc/xml.txt
+example/assertion/failure_demo.py
+example/assertion/test_failures.py
+example/assertion/test_setup_flow_example.py
 example/execnet/popen_read_multiple.py
+example/funcarg/conftest.py
 example/funcarg/costlysetup/conftest.py
 example/funcarg/costlysetup/sub1/test_quick.py
 example/funcarg/costlysetup/sub2/test_two.py
@@ -53,9 +57,6 @@ example/funcarg/test_simpleprovider.py
 example/genhtml.py
 example/genhtmlcss.py
 example/genxml.py
-example/pytest/failure_demo.py
-example/pytest/test_failures.py
-example/pytest/test_setup_flow_example.py
 py/LICENSE
 py/__init__.py
 py/_com.py
